# FW-v1

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
dashboard/: package.json
dashboard/src/: App.tsx
docs/: V41_TECHNICAL_SPECS.md
src/: config.py  main.py
src/data/: pipeline.py
src/learning/: self_improvement.py  self_learning.py
src/models/: prediction.py
src/state/: learning_state.json
