[tool.poetry]
name = "crash-prediction"
version = "1.0.0"
description = "Self-learning market crash prediction system"
authors = ["Quantitative Research Team"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"

# Web Framework
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-multipart = "^0.0.6"
httpx = "^0.25.2"
websockets = "^12.0"

# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.23"}
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
alembic = "^1.12.1"

# Redis
redis = "^5.0.1"
aioredis = "^2.0.1"

# Task Queue
celery = {extras = ["redis"], version = "^5.3.4"}
flower = "^2.0.1"

# ML/Data Science
numpy = "^1.26.2"
pandas = "^2.1.3"
scikit-learn = "^1.3.2"
scipy = "^1.11.4"
xgboost = "^2.0.2"
lightgbm = "^4.1.0"
optuna = "^3.4.0"
pymc = "^5.10.0"
arviz = "^0.17.0"

# Ephemeris
pyswisseph = "^2.10.3"

# Data Sources
yfinance = "^0.2.33"
fredapi = "^0.5.1"

# Validation & Serialization
pydantic = "^2.5.2"
pydantic-settings = "^2.1.0"

# Authentication
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}

# Monitoring
prometheus-client = "^0.19.0"
opentelemetry-api = "^1.21.0"
opentelemetry-sdk = "^1.21.0"
opentelemetry-instrumentation-fastapi = "^0.42b0"

# Logging
structlog = "^23.2.0"
python-json-logger = "^2.0.7"

# AWS
boto3 = "^1.33.6"

# Utilities
python-dotenv = "^1.0.0"
tenacity = "^8.2.3"
orjson = "^3.9.10"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
httpx = "^0.25.2"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"
mypy = "^1.7.1"
bandit = "^1.7.6"
pre-commit = "^3.6.0"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-material = "^9.5.2"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
